# cv-shelfsight

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/shelfsight/: main.py
src/shelfsight.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/shelfsight/api/: dependencies.py  router.py
src/shelfsight/api/v1/routers/: detections.py  health.py
src/shelfsight/api/v1/schemas/: detection_schema.py
src/shelfsight/services/: detection.py  detection_service.py  image_utils.py
tests/: test_detections_api.py  test_health_api.py
