[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shelfsight"
version = "0.1.0"
description = "Retail shelf detection pipeline (API + batch + AWS)"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  "pandas>=2.0",
  "boto3>=1.28",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "pytest>=8.0",
  "httpx>=0.27",
  "ultralytics>=8.0"
]

# setuptools configuration for src-layout package discovery
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["shelfsight*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"